--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/ico" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SITE-CN-02</title>
+  <title>广州大学193号站点</title>
   <script type="module" crossorigin src="./assets/index.78484553.js"></script>
   <link rel="stylesheet" href="./assets/index.ea684ee0.css">
 </head>
